[package]
name = "rs-lean"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juvenile-bin/rust-lean"
description = "练习"
license = "MIT"
authors = ["juvenile <zhb150952@gmail.com>"]

include = [
    "**/*.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
tokio ={version= "1.16.1", features= ["full"]}
reqwest={ version = "0.11", features=["blocking", "json"]}